Add Firebase Analytics, legal compliance, and enhanced UX features
Major features:
- Firebase Analytics integration with comprehensive event tracking
- Privacy Policy and Terms of Service with multi-language support
- Legal consent flow with modal UI component
- AppContext for centralized state management
- Downloadable languages with additional translations (DE, ES, FR)
- Landscape orientation support for allergy card
- Enhanced accessibility with proper ARIA labels
- EAS build configuration for app distribution

Documentation:
- Firebase setup guide
- Analytics implementation guide
- Legal compliance quick start guide
- Future extensions roadmap

Technical improvements:
- Replaced prop drilling with React Context
- Improved error handling with ErrorBoundary
- Better state persistence with AsyncStorage optimization
- Enhanced UI components with safe area handling

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "AllergiApp",
     "slug": "allergiapp",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
@@ -15,7 +15,8 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.allergiapp"
+      "bundleIdentifier": "com.allergiapp",
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
@@ -23,14 +24,17 @@
         "backgroundColor": "#4CAF50"
       },
       "package": "com.allergiapp",
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "versionCode": 1,
+      "permissions": []
     },
     "web": {
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "@react-native-firebase/app"
     ]
   }
 }
