--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "expo": "~54.0.30",
-    "expo-constants": "^18.0.12",
+    "@react-native-firebase/analytics": "^23.8.4",
+    "@react-native-firebase/app": "^23.8.4",
+    "expo": "~54.0.32",
+    "expo-constants": "~18.0.13",
     "expo-linking": "^8.0.11",
     "expo-localization": "^17.0.8",
-    "expo-router": "^6.0.21",
+    "expo-router": "~6.0.22",
+    "expo-screen-orientation": "~9.0.8",
     "expo-status-bar": "~3.0.9",
     "i18n-js": "^4.5.1",
     "react": "19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
