Move landing files to root for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": null,
-  "outputDirectory": "landing",
+  "outputDirectory": ".",
   "installCommand": null,
   "devCommand": null,
   "framework": null
