Configure Firebase GoogleService-Info.plist in app.json

--- a/app.json
+++ b/app.json
@@ -34,7 +34,14 @@
     },
     "plugins": [
       "expo-router",
-      "@react-native-firebase/app",
+      [
+        "@react-native-firebase/app",
+        {
+          "ios": {
+            "googleServicesFile": "./GoogleService-Info.plist"
+          }
+        }
+      ],
       [
         "expo-tracking-transparency",
         {
